syntax = "proto3";

service Server {
    rpc paymentRequest(paymentRequestMessage) returns (Result) {}
    rpc communicationInfoRequest(address) returns (CommunicationInfo) {}
    
    rpc crossPaymentPrepareRequest(crossPaymentPrepareReqMessage) returns (crossPaymentPrepareResult) {}
    rpc crossPaymentCommitRequest(crossPaymentCommitReqMessage) returns (crossPaymentCommitResult) {}
    rpc crossPaymentConfirmRequest(crossPaymentConfirmReqMessage) returns (crossPaymentConfirmResult) {}
    rpc crossPaymentRefundRequest(crossPaymentRefundReqMessage) returns (Result) {}

}

message paymentRequestMessage {
    int64 pn = 1;
    string from = 2;
    string to = 3;
    int64 amount = 4;
}

message address {
    string addr = 1;
}

message Result {
    bool result = 1;
}

message CommunicationInfo {
    string IPAddress = 1;
    int64 port = 2;
}

message crossPaymentPrepareReqMessage {
    int64 pn = 1;
    string from = 2;
    string to = 3;
    int64 amount = 4;
    bytes originalMessage = 5;
    bytes signature = 6;
}

message crossPaymentCommitReqMessage {
    int64 pn = 1;
    string from = 2;
    string to = 3;
    int64 amount = 4;
    bytes originalMessage = 5;
    bytes signature = 6;
}

message crossPaymentConfirmReqMessage {
    int64 pn = 1;
    string from = 2;
    string to = 3;
    int64 amount = 4;
    bytes originalMessage = 5;
    bytes signature = 6;
}

message crossPaymentRefundReqMessage {
    int64 pn = 1;
    string from = 2;
    string to = 3;
    int64 amount = 4;
    bytes originalMessage = 5;
    bytes signature = 6;
}

message crossPaymentPrepareResult {
    int64 pn = 1;
    bool result = 2;
    bytes originalMessage = 3;
    bytes signature = 4;
}

message crossPaymentCommitResult {
    int64 pn = 1;
    bool result = 2;
    bytes originalMessage = 3;
    bytes signature = 4;
}

message crossPaymentConfirmResult {
    int64 pn = 1;
    bool result = 2;
    bytes originalMessage = 3;
    bytes signature = 4;
}
